<resources>
    <string name="app_name">AndroidArchComp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="come_in">Войти</string>
    <string name="number">Телефон</string>
    <string name="password">Пароль</string>
    <string name="logo">logo</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="show">Посмотреть</string>
    <string name="news">Актуальные новости</string>
    <string name="avatar">avatar</string>
    <string name="info">info</string>
    <string name="updateList">обновить список</string>
    <string name="error_network">Ошибка соединения</string>
    <string name="demo">Demo</string>
    <string name="data_fot_you">Заполните данные о себе</string>
    <string name="register">register</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="check_passwrod">Повторите пароль</string>


    <string name="hint_background">+7 (___) ___-__-__</string>
</resources>
